remove usage of -XX:MaxPermSize
removed in java 1.8 and just confuses users when the jvm prints a
warning message.